내등짝이야ㅜㅜ

--- a/mywork/103_7.html
+++ b/mywork/103_7.html
@@ -17,9 +17,11 @@
 
     <p>범위 : <input type="range" min="0" max="100"></p>
 
-    <p>메세지는안해도될듯듯</p
+    <p>메세지는안해도될듯듯</p>
 
     <input type="submit" value="다했니?">
+    
+    <img src="../img/logo_main_title2.png">
 
 </form>
 </body>
