--- a/mywork/104.html
+++ b/mywork/104.html
@@ -42,7 +42,7 @@
         </li>
         <li>
             <p>
-                카드 소유자 이름 : <input type="text" required placeholder="이름을 제대로 쓰라">
+                카드 소유자 이름 : <input type="email" required placeholder="이름을 제대로 쓰라">
             </p>
         </li>
 
