--- a/Day04/03_z_index.html
+++ b/Day04/03_z_index.html
@@ -34,14 +34,59 @@
             left: 60px;
             background-color: green;
         }
+
+        /*이미지랑 글씨랑 겹치고싶니?*/
+        /*p요소에 대한 스타일을 바꾸는 방법이 있지*/
+
+        /*p {*/
+        /*margin-top: -150px;*/
+        /*}      이 방법은 개똥이야*/
+
+        img {
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            z-index: -1;
+        }
+
+        #kk {
+            min-width: 300px;
+        }
     </style>
 </head>
 <body>
 
 
-<div id="aa">box 1</div>
-<div id="bb">box 2</div>
-<div id="cc">box 2</div>
+<!--<div id="aa">box 1</div>-->
+<!--<div id="bb">box 2</div>-->
+<!--<div id="cc">box 2</div>-->
 
+<img src="img/pome.png" width="200" height="200">
+<p>포메라니안 입니당. 짱귀욥 ㅎㅎ;;</p>
+
+
+<p id="kk">
+
+    고유결 전문 작업장
+    100%수동
+
+    고유결 파밍 해드립니다.
+
+    거래량 10억 이상인 경우 서비스 있습니다.
+
+    레벨 56이상
+
+    무게 800이상
+    방어력 최소 100이상
+
+    거래메이드 보유하고 있으시면
+    입찰 해드립니다.
+    (예:오반 단델 우둔 기타등등 )
+    생활하시는분들 맥주 보유하시고 계시면 일꾼 계속 돌려드립니다.
+    원할시 파밍금액중 일부를 기억의파편과 블스로 같이 맞춰서 드립니다
+    ( 판매가 기준 기억의파편: 64만 블스 : 17만8천으로 계산)
+    거래신청후 쪽지주세요
+
+</p>
 </body>
 </html>
